hphp/hack/test/typecheck/aktuple/list_ok.php.like_types.exp
File "list_ok.php", line 6, characters 14-14:
Invalid argument (Typing[4110])
File "list_ok.php", line 13, characters 22-27:
Expected string
File "list_ok.php", line 6, characters 14-14:
But got int
